--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+*{
+  font-family: 'Montserrat', sans-serif !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.spinner-parent{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0,0,0,0.75);
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
+.spinner-border{
+  height: 5rem;
+  width: 5rem;
+  color: white !important;
+}
+
+.remix-icons{
+  font-size: 30px;
+  color:black !important;
+  cursor: pointer;
+  padding-left: 10px;
+}
+
+
+input{
+  border-radius: 1px !important;
+  border: 1px solid rgba(128, 128, 128, 0.521) !important;
+  height: 40px !important;
+}
+
+input:focus{
+  outline: none !important;
+  box-shadow: none !important;
+  border: 1px solid gray !important;
+}
+
+label{
+  font-size: 16px !important;
+  color: black !important;
+}
+
+.ant-form-item{
+  margin: 10px 0 !important;
+}
+
+/* common style */
+
+.card{
+  box-shadow: 0 0 2px gray;
+  border-radius: 0 !important ;
+}
+
+.primary-button{
+  background-color: #005555 !important;
+  height: 40px !important;
+  width: 100% !important;
+  border-color : #005555 !important;
+  color: white !important;
+  font-size: 16px !important;
+}
+
+.anchor{
+  color:black !important;
+  text-decoration: underline;
+  font-size: 16px !important;
+  cursor: pointer;
+}
+.anchor:hover{
+  text-decoration: underline !important;
+}
+
+.ri-delete-bin-7-line{
+  cursor: pointer;
+}
+
+.page-title{
+  font-size: 25px;
+  color:rgba(0,0,0,0.734);
+  font-weight: bold;
+}
+
+.card-title{
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.normal-text{
+  font-size: 1rem;
+}
+
+.authentication{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #005555;
+}
+
+.authentication-form{
+width: 400px;
+}
+.authentication .card-title{
+  font-size :1.5rem;
+  font-weight: bold;
+  background-color: orange;
+  color: white !important;
+  max-width: max-content !important;
+  padding: 7px 15px;
+  margin-left: -40px;
+  border-bottom-left-radius: 10px;
 }
